[package]
name = "hueflow-rs"
version = "0.1.0"
authors = ["Gabriele Genta <gabriele.genta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ctrlc = "3.1.5"
huelib = "0.9.0"
more-asserts = "0.2.1"
render = "0.3.1"
sunrise = "1.0.0"
